tests/baselines/reference/amdDependencyComment1.errors.txt
amdDependencyComment1.ts(3,21): error TS2307: Cannot find module 'm2' or its corresponding type declarations.


==== amdDependencyComment1.ts (1 errors) ====
    ///<amd-dependency path='bar'/>
    
    import m1 = require("m2")
                        ~~~~
!!! error TS2307: Cannot find module 'm2' or its corresponding type declarations.
    m1.f();